# speech_transcriber

./: .gitignore  Cargo.toml  data.json
src/: audio_file_reader.rs  main.rs  model.rs  modify.rs  speech_client.rs  transcription_printer.rs
